# wormhole

./: Dockerfile.const  Tiltfile
algorand/: admin.py
algorand/test/: test.py
devnet/: node.yaml
ethereum/: .env  .env.metaos.devnet  package-lock.json  package.json  truffle-config.js
ethereum/migrations/: 2_deploy_wormhole.js  3_deploy_bridge.js
ethereum/scripts/: attest_token.js  complete_transfer.js  create_wrapped.js  deploy.js  deploy_erc20_token.js  depose_eth.js  get_deployed_tokenbridge.js  get_deployed_weth.js  get_deployed_wormhole.js  query_guardian_set.js  query_guardian_set_index.js  query_wrapped_asset.js  register_metaos_chain.js  register_sophon_chain.js  register_terra_chain.js  submit_new_guardian_set.js  transfer_tokens.js
metaos/artifacts/: cw20_base.wasm
metaos/contracts/: compile_contracts.sh
metaos/contracts/custom-msg/: Cargo.toml
metaos/contracts/custom-msg/src/: bank_msg.rs  custom_msg.rs
metaos/script/: .env.devnet  attest_cw20_asset.js  attest_native_asset.js  deploy.js  deposit_and_transfer_bank_asset.js  for_docker.js  increase_allowance_of_cw20_asset.js  package-lock.json  package.json  query_cw20.js  query_denom_wrapped_asset_info.js  query_external_id.js  query_wrapped_registry.js  submit_VAA.js  submit_gov_VAA.js  transfer_cw20_asset.js  withdraw_bank_asset.js
near/: Makefile  NOTES.md  TODO  devnet_deploy.sh  devnet_deploy.ts  package-lock.json  package.json
near/test/: test.ts  (+1 more)
node/: go.mod  go.sum
scripts/: devnet-consts.json  guardian-set-init.sh
sophon/: Cargo.toml  Dockerfile  generate_governance  verify
(+159 files in other folders)
