[package]
name = "custom-msg"
version = "0.1.0"
authors = ["Ramboll <ramboll.wong@hotmail.com>"]
edition = "2018"
description = "Wasm Custom Msg Lib For MetaOS Chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []
[dependencies]
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
